--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,14 @@
 body {
   font-family: "Archivo", serif;
 }
+
+#notification-container {
+  position: fixed;
+  top: 20px;
+  right: 0px;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 350px;
+}
